Use wrapper tracing in ErrorEvent

Having ScriptValue in ErrorEvent creates a cycle reference between
blink and v8 and causes memory leak. Fix it by using wrapper tracing.

BUG=701695,501866

Change-Id: I3235bc52f95e9fb54ab37e234269ffe5374f10c6